# xextproto

./: .cvsignore  .gitignore  ChangeLog  EVI.h  EVIproto.h  Makefile.am  XLbx.h  XShm.h  XTest.h  Xag.h  Xagsrv.h  Xagstr.h  Xcupstr.h  Xdbe.h  Xext.h  Xge.h  ag.h  agproto.h  configure.ac  cup.h  cupproto.h  dbe.h  dbeproto.h  dpms.h  dpmsconst.h  dpmsproto.h  dpmsstr.h  extutil.h  ge.h  geproto.h  geproto.txt  lbx.h  lbximage.h  lbxopts.h  lbxproto.h  lbxstr.h  mitmisc.h  mitmiscproto.h  multibuf.h  multibufconst.h  (+21 more)
specs/: Makefile.am  appgroup.xml  appgrp.xml  dbe.xml  dpms.xml  evi.xml  geproto.txt  geproto.xml  lbx.xml  multibuf.xml  security.xml  shape.xml  shm.xml  sync.xml  tog-cup.xml  xtest.xml
